Fix subscribe spacing

--- a/packages/portal-style/src/components/_subscribe.scss
+++ b/packages/portal-style/src/components/_subscribe.scss
@@ -1,5 +1,9 @@
 .dp-po-subscribe {
   $self: '.dp-po-subscribe';
+  margin: 0 0 20px;
+  &:last-child {
+    margin: 0;
+  }
 
   .dropdown-menu {
     border-color: $brand-primary;
